Rework pics in slides, fixes

--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -62,7 +62,7 @@
 
 
   \item
-    Групи методів ql3rlWvnAAW і Fq3rlFvnAAF, якы були застосовані для ідентифікації
+    Групи методів ql3rlWvnAAW і Fq3rlFvnAAF, які були застосовані для ідентифікації
     тестових систем, показали досить близький рівень помилок
     ідентифікації. При цьому, в разі хорошого критерію кращу якість
     демонструє група ql3rlWvnAAW. Також, методи цієї групи менш чутливі
@@ -71,7 +71,7 @@
   \item
     Найбільш значимий параметр системи ідентифікації ---
     $a_q $, при цьому оптимальне (в сенсі похибки ідентифікації)
-    його значення визначається, в аершу чергу, динамікою
+    його значення визначається, в першу чергу, динамікою
     ідентифікованого параметра. Налаштування інших параметрів
     системи ідентифікації, в цілому, не настільки критичне ---
     ансамблеві систем ідентифікації демонструють хорошу робастність.
