--- a/p5/vdp_testsys.tex
+++ b/p5/vdp_testsys.tex
@@ -288,7 +288,7 @@ $\varepsilon$, яке повільно змінюється.
 $p_\mathrm{id}$ дозволяють досить точно провести
 ідентифікацію. Невеликі коливання обумовлені тим, що насправді
 система не в повній мірі може бути названа квазістаціонарною,
-через великий часу усереднення критерію. Ділянок, на яких
+через великий час усереднення критерію. Ділянок, на яких
 порушувався б процес ідентифікації, або ж істотно зросла
 похибка, не спостерігається.
 
