--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -282,7 +282,7 @@ $y(t)$ . У цьому випадку не можна говорити про і
 
 
 
-Принципову схема і друковану плану було спроектовано в
+Принципову схему і друковану плану було спроектовано в
 програмному комплексі ``kicad''. Друкована плата виготовлена
 з використанням негативного фоторезисту. Зовнішній
 вигляд зібраної схеми на друкованій платі представлений
