--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -336,12 +336,12 @@ $\overline{e}(q_\gamma) $ представлені на рис.~\ref{atu:f:ross_
 
 Обидва графіка демонструють збільшення похибки ідентифікації
 при надмірній чутливості, тобто при
-$ q_\gamma \to 0 $. Однак в подальшому поведінку графіків
+$q_\gamma \to 0$. Однак в подальшому поведінку графіків
 розрізняються. Якщо параметр змінюється різко, що похибки
 ідентифікації, пов'язані з недостатньою чутливістю, стають
 малими, в порівнянні з похибками, зумовленими обмеженою
 швидкістю зміни критерію, і залежність від
-$ q_\gamma $ практично відсутня. При менш яскраво вираженої динамки
+$q_\gamma$ практично відсутня. При менш яскраво вираженої динаміки
 зміни параметра, з'являється як збільшення похибки через
 недостатню чутливість, так і відмінність між застосовуваними
 пошуковими координаторами методів. В першу чергу зростає
