--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -678,7 +678,7 @@ $\SI{2E-7}{\second} $.
 \section{Дослідження динаміки фізичної реалізації генератора Колпітца} %{{{1
 
 Як уже зазначалося, використання в якості реєстратора даних
-цифрового осцилографа класу Rigol DS1052E, незважаючи на гарне роздільну здатність
+цифрового осцилографа класу Rigol DS1052E, незважаючи на гарну роздільну здатність
 в часовій області ($ \SI{10}{\nano \second} $), швидкість і простоту отримання посвідки
 аттрактора, має ряд істотних недоліків.
 
@@ -1153,7 +1153,7 @@ $R_c $ генератора Колпітца.
 \end{figure}
 
 Отримані залежності мають досить дивний вигляд. Початкова
-ділянка, на якому зазвичай спостерігається зростання похибки
+ділянка, на якої зазвичай спостерігається зростання похибки
 ідентифікації через надмірну чутливість, замаскований істотним
 рівнем статичної похибки ідентифікації. Подальша слабка
 залежність аналогічна отриманим залежностям для інших систем.
@@ -1221,7 +1221,7 @@ $R_c $, що визначає вид цієї динаміки, дозволяю
   \item
     Застосування для опису поведінки генератора Колпітца
     класичної моделі виду (\ref{atu:eq:colp}) дозволяє отримати тільки
-    якісне подобу. Ця модель відображає наявність режимів, що
+    якісну подобу. Ця модель відображає наявність режимів, що
     спостерігаються у реальної системи, і переходів між ними. Однак,
     і форма коливань, і параметри переходу дотримуються дуже
     приблизно.
