--- a/slides/slides_atu.tex
+++ b/slides/slides_atu.tex
@@ -528,6 +528,12 @@
   \label{atu:f:lor_q_r_b}
 \end{figure}
 
+  Можлива одночасна ідентифікація параметрів
+  $r$ і
+  $b$, за умови спільного застосування критеріїв
+  $q_{x^2}$ і
+  $q_{z^2}$.
+
 \end{frame}
 
 
@@ -546,6 +552,10 @@
     \end{cases}
     \label{atu:eq:spr_a}
   \end{equation}
+
+Відмінною особливістю цієї системи є відсутність положень рівноваги, що унеможливлює
+застосування багатьох відомих методів аналізу, заснованих на будь-якому
+розкладі в околі точок рівноваги.
 
   \begin{figure}
     \PicDouble{../p5/p/cha/spr_a/sprott_a-p_xyz_cx_y=0x372.png}{../p5/p/cha/spr_a/sprott_a_f-p_f_cx_y=0x372.png}
